--- a/index.html
+++ b/index.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>你好，世界</title>
+    <meta name="keywords" content="疯狂,联盟">
+    <meta name="description" content="疯狂联盟官网，爱进不进，而且要密码哟">
+    <meta name="author" content="夏肥童">
+    <title>疯狂联盟</title>
 </head>
 <body>
-    <h1>你好，世界！</h1>
+    <div id="container" style="width:1000px">
+    <div id="header" style="background-color:black;">
+    <h1 style="margin-bottom:0;color:white">疯狂联盟官网</h1></div>
+    <div id="content" style="background-color:gray;height:600px;width:1000px;float:left;">
+    <label>用户名</label><br>
+<input id="用户名" type="text"><br>
+<label>密码</label><br>
+<input id="密码" type="password"><br>
+<button onclick="myFunction()">登录</button>
+<script>
+function myFunction() {
+   if(document.getElementById("用户名").value=="AOLIGEIGAN")
+   {
+    if(document.getElementById("密码").value=="JJFBT0000")
+    {
+    alert("登录成功");
+    window.location.href="li.html";
+    } 
+    else
+    {
+      alert("密码错误");
+    }
+   }
+   else
+  {
+    alert("用户名错误");
+  }
+
+
+}
+</script></div>
+    <div id="footer" style="background-color:white;clear:both;text-align:center;">
+    版权所有 <a href="http://www.crazyalliance">crazyalliance</a></div>
 </body>
 </html>
