--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="疯狂,联盟">
-    <meta name="description" content="疯狂联盟官网，爱进不进，而且要密码哟">
+    <meta name="keywords" content="疯狂,盟会,AOLIGEI">
+    <meta name="description" content="疯狂盟会官网，爱进不进，而且要密码哟">
     <meta name="author" content="夏肥童">
-    <title>疯狂联盟</title>
+    <title>疯狂盟会</title>
 </head>
 <body>
-    <div id="container" style="width:1000px">
+    <div id="container" style="width:500px">
     <div id="header" style="background-color:black;">
-    <h1 style="margin-bottom:0;color:white">疯狂联盟官网</h1></div>
-    <div id="content" style="background-color:gray;height:600px;width:1000px;float:left;">
+    <h1 style="margin-bottom:0;color:white">疯狂盟会官网</h1></div>
+    <div id="content" style="background-color:gray;height:600px;width:500px;float:left;">
     <label>用户名</label><br>
 <input id="用户名" type="text"><br>
 <label>密码</label><br>
@@ -41,6 +41,6 @@ function myFunction() {
 }
 </script></div>
     <div id="footer" style="background-color:white;clear:both;text-align:center;">
-    版权所有 <a href="http://www.crazyalliance">crazyalliance</a></div>
+    版权所有 2020<a href="http://www.crazyalliance">crazyalliance</a></div>
 </body>
 </html>
