--- a/li.html
+++ b/li.html
@@ -4,15 +4,16 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="夏肥童">
-<title>疯狂联盟内部界面</title>
+<title>疯狂盟会内部界面</title>
 </head>
 <body>
 <div id="container" style="width:1000px">
 <div id="header" style="background-color:black;">
-<h1 style="margin-bottom:0;color:white">疯狂联盟官网内部</h1></div>
+<h1 style="margin-bottom:0;color:white">疯狂盟会官网内部</h1></div>
 <div id="content" style="background-color:gray;height:600px;width:1000px;float:left;">
-<p style="color:red;">恭喜进入内部，此网站继续开发中（qq群：906970405）</p></div>
+<p style="color:green;">恭喜进入内部，此网站继续开发中（qq群：906970405）</p>
+<p1 style="color:red;">通知：花洒联盟加盟本网站，一起讨伐陈列强。支持赖奸商！</p></div>
 <div id="footer" style="background-color:white;clear:both;text-align:center;">
-版权所有 <a href="http://www.crazyalliance">crazyalliance</a></div>
+版权所有 2020<a href="http://www.crazyalliance.top">crazyalliance</a></div>
 </body>
 </html>
