--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@ function myFunction() {
 }
 </script></div>
     <div id="footer" style="background-color:white;clear:both;text-align:center;">
-    版权所有 2020<a href="http://www.crazyalliance">crazyalliance</a></div>
+    版权所有 2020<a href="http://www.crazyalliance.top">crazyalliance</a></div>
 </body>
 </html>
