--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <input id="用户名" type="text"><br>
 <label>密码</label><br>
 <input id="密码" type="password"><br>
+<label>验证码</label><br>
+<img src="huaji.jpg" alt="hahaha">
+<input id="验证码" type="text"><br>
 <button onclick="myFunction()">登录</button>
 <script>
 function myFunction() {
