--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <label>密码</label><br>
 <input id="密码" type="password"><br>
 <label>验证码</label><br>
-<img src="huaji.jpg" alt="hahaha">
+<img src="huaji.jpg" alt="hahaha" style="width:5px;height:5px;">
 <input id="验证码" type="text"><br>
 <button onclick="myFunction()">登录</button>
 <script>
