--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="疯狂,盟会,AOLIGEI">
-    <meta name="description" content="疯狂盟会官网，爱进不进，而且要密码哟">
+    <meta name="description" content="疯狂盟会官网">
     <meta name="author" content="夏肥童">
     <title>疯狂盟会</title>
 </head>
 <body>
-    <div id="container" style="width:500px">
+    <div id="container" style="width:100%">
     <div id="header" style="background-color:black;">
     <h1 style="margin-bottom:0;color:white">疯狂盟会官网</h1></div>
-    <div id="content" style="background-color:gray;height:600px;width:500px;float:left;">
+    <div id="content" style="background-color:gray;height:50%;width:100%;float:left;">
     <label>用户名</label><br>
 <input id="用户名" type="text"><br>
 <label>密码</label><br>
 <input id="密码" type="password"><br>
 <label>验证码</label><br>
-<img src="huaji.jpg" alt="hahaha" style="width:5px;height:5px;">
+<img src="huaji.jpg" alt="hahaha" style="width:10%;height:10%;">
 <input id="验证码" type="text"><br>
 <button onclick="myFunction()">登录</button>
 <script>
