--- a/li.html
+++ b/li.html
@@ -12,7 +12,7 @@
 <h1 style="margin-bottom:0;color:white">疯狂盟会官网内部</h1></div>
 <div id="content" style="background-color:gray;height:600px;width:1000px;float:left;">
 <p style="color:green;">恭喜进入内部，此网站继续开发中（qq群：906970405，验证码牛不牛逼）</p>
-<p1 style="color:red;">通知：花洒联盟加盟本网站，一起讨伐陈列强。支持赖奸商！</p></div>
+<p1 style="color:red;">通知：花洒联盟已解散</p></div>
 <div id="footer" style="background-color:white;clear:both;text-align:center;">
 版权所有 2020<a href="http://www.crazyalliance.top">crazyalliance</a></div>
 </body>
