--- a/li.html
+++ b/li.html
@@ -7,10 +7,10 @@
 <title>疯狂盟会内部界面</title>
 </head>
 <body>
-<div id="container" style="width:1000px">
+<div id="container" style="width:100%">
 <div id="header" style="background-color:black;">
 <h1 style="margin-bottom:0;color:white">疯狂盟会官网内部</h1></div>
-<div id="content" style="background-color:gray;height:600px;width:1000px;float:left;">
+<div id="content" style="background-color:gray;height:95%;width:100%;float:left;">
 <p style="color:green;">恭喜进入内部，此网站继续开发中（qq群：906970405，验证码牛不牛逼）</p>
 <p1 style="color:red;">通知：花洒联盟已解散</p></div>
 <div id="footer" style="background-color:white;clear:both;text-align:center;">
