--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>疯狂盟会</title>
 </head>
 <body>
-    <div id="container" style="width:100%">
+    <div id="container" style="width:100%;height:100%">
     <div id="header" style="background-color:black;">
     <h1 style="margin-bottom:0;color:white">疯狂盟会官网</h1></div>
     <div id="content" style="background-color:gray;height:95%;width:100%;float:left;">
