--- a/index.html
+++ b/index.html
@@ -1,49 +1,74 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="疯狂,盟会,AOLIGEI">
-    <meta name="description" content="疯狂盟会官网">
-    <meta name="author" content="夏肥童">
-    <title>疯狂盟会</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="疯狂,盟会,AOLIGEI">
+  <meta name="description" content="疯狂盟会官网">
+  <meta name="author" content="夏肥童">
+  <link rel="icon" type="image/jpg" href="huaji.jpg">
+  <title>疯狂盟会</title>
 </head>
-<body>
-    <div id="container" style="width:100%;height:100%">
-    <div id="header" style="background-color:black;">
-    <h1 style="margin-bottom:0;color:white">疯狂盟会官网</h1></div>
-    <div id="content" style="background-color:gray;height:95%;width:100%;float:left;">
-    <label>用户名</label><br>
-<input id="用户名" type="text"><br>
-<label>密码</label><br>
-<input id="密码" type="password"><br>
-<label>验证码</label><br>
-<img src="huaji.jpg" alt="hahaha" style="width:2%;height:2%;">
-<input id="验证码" type="text"><br>
-<button onclick="myFunction()">登录</button>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/md5-js@0.0.3/md5.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 <script>
-function myFunction() {
-   if(document.getElementById("用户名").value=="AOLIGEIGAN")
-   {
-    if(document.getElementById("密码").value=="JJFBT0000")
-    {
-    alert("登录成功");
-    window.location.href="li.html";
-    } 
-    else
-    {
-      alert("密码错误");
+  function myFunction() {
+    var uu = md5(document.getElementById("username").value);
+    var pp = md5(document.getElementById("password").value);
+    // document.getElementById("username").value
+    // AOLIGEIGAN
+    // JJFBT0000
+    if (uu == "cd2239dfc5da7bf418f43205229f2bd0", pp == "013c51c369d7e3bb7442e5c3ef67c29f") {
+      alert("登录成功");
+      window.location.href = "%6C%69%2E%68%74%6D%6C";
+      var t = '1'
     }
-   }
-   else
-  {
-    alert("用户名错误");
+    else {
+      alert("用户名或密码错误");
+      var t = '0'
+    }
   }
+</script>
 
-
-}
-</script></div>
-    <div id="footer" style="background-color:white;clear:both;text-align:center;">
-    版权所有 2020<a href="http://www.crazyalliance.top">crazyalliance</a></div>
+<body>
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+      <img src="huaji.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+      疯狂盟会官网
+    </a>
+  </nav>
+  <div class="jumbotron">
+    <div class="alert alert-dark" role="alert">
+      欢迎来到疯狂盟会官网，请登录！
+    </div>
+    <form>
+      <div class="form-group">
+        <label>用户名</label>
+        <input type="username" class="form-control" id="username">
+        <small class="form-text text-muted">你可以去找“夏肥童”要……</small>
+      </div>
+      <div class="form-group">
+        <label>密码</label>
+        <input type="password" class="form-control" id="password">
+      </div>
+      <div class="form-group">
+        <label>验证码</label>
+        <img src="huaji.jpg" alt="hahaha" style="width:2%;height:2%;">
+        <input type="text" class="form-control" id="验证码">
+      </div>
+      <button type="button" class="btn btn-primary" onclick="myFunction()">登录</button>
+    </form>
+  </div>
+  <div class="card">
+    <div class="card-body">
+      <div id="footer" class="footer text-center">
+        版权所有 2020<a href="http://www.crazyalliance.top"> crazyalliance</a></div>
+      <!-- style="background-color:white;clear:both;text-align:center;" -->
+    </div>
+  </div>
 </body>
+
 </html>
