--- a/index.html
+++ b/index.html
@@ -14,24 +14,7 @@
 <script src="https://cdn.jsdelivr.net/npm/md5-js@0.0.3/md5.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-<script>
-  function myFunction() {
-    var uu = md5(document.getElementById("username").value);
-    var pp = md5(document.getElementById("password").value);
-    // document.getElementById("username").value
-    // AOLIGEIGAN
-    // JJFBT0000
-    if (uu == "cd2239dfc5da7bf418f43205229f2bd0", pp == "013c51c369d7e3bb7442e5c3ef67c29f") {
-      alert("登录成功");
-      window.location.href = "%6C%69%2E%68%74%6D%6C";
-      var t = '1'
-    }
-    else {
-      alert("用户名或密码错误");
-      var t = '0'
-    }
-  }
-</script>
+<script src="js.js"></script>
 
 <body>
   <nav class="navbar navbar-dark bg-dark">
@@ -52,14 +35,14 @@
       </div>
       <div class="form-group">
         <label>密码</label>
-        <input type="password" class="form-control" id="password">
+        <input type="password" class="form-control" id="password" onkeydown="if(event.keyCode==13) document.all.login.click()">
       </div>
       <div class="form-group">
         <label>验证码</label>
         <img src="huaji.jpg" alt="hahaha" style="width:2%;height:2%;">
         <input type="text" class="form-control" id="验证码">
       </div>
-      <button type="button" class="btn btn-primary" onclick="myFunction()">登录</button>
+      <button type="button" class="btn btn-primary" onclick="myFunction()" id="login">登录</button>
     </form>
   </div>
   <div class="card">
