--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <div class="form-group">
         <label>密码</label>
         <input type="password" class="form-control" id="password" onkeydown="if(event.keyCode==13) document.all.login.click()">
+        <small class="form-text text-muted">测试账户密码均为“demo”</small>
       </div>
       <div class="form-group">
         <label>验证码</label>
@@ -48,7 +49,7 @@
   <div class="card">
     <div class="card-body">
       <div id="footer" class="footer text-center">
-        版权所有 2020<a href="http://www.crazyalliance.top"> crazyalliance</a></div>
+        版权所有 2020<a href="https://www.crazyalliance.top"> crazyalliance</a><span> × </span><a target="_blank" href="https://wr0926.ml">wayne0926</a></div>
       <!-- style="background-color:white;clear:both;text-align:center;" -->
     </div>
   </div>
