--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
   <link rel="icon" type="image/jpg" href="huaji.jpg">
   <title>疯狂盟会</title>
-  <script src="js.js"></script>
 </head>
 
 <body onload="login()">
@@ -56,6 +55,6 @@
 <script src="https://cdn.jsdelivr.net/npm/md5-js@0.0.3/md5.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/wayne0926/miaodrew.github.io/assets/js/base64.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js"></script>
+<script src="js.js"></script>
 </html>
