--- a/user/index.html
+++ b/user/index.html
@@ -12,7 +12,7 @@
     <title>疯狂盟会</title>
 </head>
 
-<body onload="login()">
+<body onload="start()">
     <nav class="navbar sticky-top navbar-dark bg-dark">
         <a class="navbar-brand" href="../index.html">
             <img src="../huaji.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -47,7 +47,7 @@
 <script src="https://cdn.jsdelivr.net/npm/md5-js@0.0.3/md5.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/wayne0926/miaodrew.github.io/assets/js/base64.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js"></script>
 <script src="js.js"></script>
 
 </html>
