--- a/user/com.html
+++ b/user/com.html
@@ -42,7 +42,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/wayne0926/miaodrew.github.io/assets/js/base64.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js"></script>
-<script src="./js.js"></script>
+<script src="/user/js.js"></script>
 <script>
     new Valine({
         el: '#vcomments',
