--- a/user/index.html
+++ b/user/index.html
@@ -26,7 +26,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1>这里是疯狂盟会！</h1>
-            <a type="button" class="btn btn-outline-primary" role="button" href="/com.html">点击进入留言板</a><br><br>
+            <a type="button" class="btn btn-outline-primary" role="button" href="/user/com.html">点击进入留言板</a><br><br>
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
                 <strong>通知：</strong> 花洒联盟已解散
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -48,6 +48,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/wayne0926/miaodrew.github.io/assets/js/base64.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js"></script>
-<script src="/js.js"></script>
+<script src="/user/js.js"></script>
 
 </html>
