--- a/user/com.html
+++ b/user/com.html
@@ -14,7 +14,7 @@
 </head>
 
 <body onload="start()">
-    <nav class="navbar sticky-top navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="../index.html">
             <img src="../huaji.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
             疯狂盟会官网
@@ -33,9 +33,9 @@
         <div id="vcomments"></div>
     </div>
     <hr>
-    <div id="footer" class="footer text-center">
+    <footer id="footer" class="text-center">
         版权所有 2020<a href="https://www.crazyalliance.top"> crazyalliance</a><span> × </span><a target="_blank"
-            href="https://wr0926.ml" rel='noreferrer noopener'>wayne0926</a></div>
+            href="https://wr0926.ml" rel='noreferrer noopener'>wayne0926</a></footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/md5-js@0.0.3/md5.min.js"></script>
