--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <label>密码</label>
           <input type="password" class="form-control" id="password"
             onkeydown="if(event.keyCode==13) document.all.login.click()">
-          <small class="form-text text-muted">测试账户密码均为“demo”</small>
+          <small class="form-text text-muted">测试账户密码均为“demo”（可惜已经没了）</small>
         </div>
         <div class="form-group">
           <label>验证码</label>
